<resources>
    <string name="app_name">BarcelonaTeam</string>
    <string name="First_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="None">None</string>
    <string name="Name">Full name :</string>
    <string name="DOB">Date of Birth :</string>
    <string name="Goals">Goals :</string>
    <string name="Assists">Assists :</string>
    <string name="Saves">Saves :</string>
    <string name="Player_Image">Player Image :</string>
    <string name="NationalTeam">National Team : </string>
    <string name="Exit">Exit</string>
    <string name="Notification">Notification</string>
    <string name="NextGames">Matches</string>
    <string name="Change_player">Change player</string>
    <string name="Comment">Comment:</string>
    <string name="clear">clear:</string>
    <string name="Away">Away</string>
    <string name="Home">Home</string>
    <string name="add_player">Add player</string>
    <string name="delete_player">Delete player</string>
    <string name="Agree">Agree</string>
    <string name="remove_player">Remove Player</string>
</resources>