<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE2C9"
    android:clickable="true">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:shadowColor="#FFFFFF"
        android:text="@string/add_player"
        android:textColor="#072158"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Saves"
        android:textColor="#072158"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/savesId"
        app:layout_constraintEnd_toStartOf="@+id/savesId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/assistsId"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_name"
        android:textColor="#072158"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/firstnameId"
        app:layout_constraintEnd_toStartOf="@+id/firstnameId"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firstnameId"
        app:layout_constraintVertical_bias="0.521" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Last_name"
        android:textColor="#072158"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/lastnameId"
        app:layout_constraintEnd_toStartOf="@+id/lastnameId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/firstnameId"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DOB"
        android:textColor="#072158"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/dobId"
        app:layout_constraintEnd_toStartOf="@+id/dobId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/lastnameId"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NationalTeam"
        android:textColor="#072158"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/nationalTeamId"
        app:layout_constraintEnd_toStartOf="@+id/nationalTeamId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/nationalTeamId"
        app:layout_constraintVertical_bias="0.521" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Goals"
        android:textColor="#072158"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/goalsId"
        app:layout_constraintEnd_toStartOf="@+id/goalsId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/goalsId"
        app:layout_constraintVertical_bias="0.391" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Assists"
        android:textColor="#072158"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/assistsId"
        app:layout_constraintEnd_toStartOf="@+id/assistsId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/goalsId" />

    <EditText
        android:id="@+id/firstnameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#DE0029"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/lastnameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#DE0029"
        app:layout_constraintEnd_toEndOf="@+id/firstnameId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstnameId"
        app:layout_constraintTop_toBottomOf="@+id/firstnameId" />

    <EditText
        android:id="@+id/dobId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="yyyy-mm-dd"
        android:inputType="date"
        android:textColor="#DE0029"
        app:layout_constraintEnd_toEndOf="@+id/lastnameId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastnameId"
        app:layout_constraintTop_toBottomOf="@+id/lastnameId" />

    <EditText
        android:id="@+id/nationalTeamId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#DE0029"
        app:layout_constraintEnd_toEndOf="@+id/dobId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dobId"
        app:layout_constraintTop_toBottomOf="@+id/dobId" />

    <EditText
        android:id="@+id/goalsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#DE0029"
        app:layout_constraintEnd_toEndOf="@+id/nationalTeamId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nationalTeamId"
        app:layout_constraintTop_toBottomOf="@+id/nationalTeamId" />

    <EditText
        android:id="@+id/assistsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#DE0029"
        app:layout_constraintEnd_toEndOf="@+id/goalsId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/goalsId"
        app:layout_constraintTop_toBottomOf="@+id/goalsId" />

    <EditText
        android:id="@+id/savesId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#DE0029"
        app:layout_constraintEnd_toEndOf="@+id/assistsId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/assistsId"
        app:layout_constraintTop_toBottomOf="@+id/assistsId" />

    <Button
        android:id="@+id/agreeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#072158"
        android:text="@string/Agree"
        android:textAllCaps="false"
        android:textColor="#FCBD00"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savesId" />

</androidx.constraintlayout.widget.ConstraintLayout>