<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="194dp"
        android:layout_height="76dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/NextGames"
        android:textColor="#072158"
        android:textSize="35dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageButtonBall1"
        android:layout_width="67dp"
        android:layout_height="54dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:srcCompat="@drawable/ball" />

    <ImageView
        android:id="@+id/imageButtonBall2"
        android:layout_width="67dp"
        android:layout_height="54dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:srcCompat="@drawable/ball" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#072158"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:id="@+id/awayId1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView231"
            app:layout_constraintStart_toStartOf="@+id/textView231"
            app:layout_constraintTop_toTopOf="@+id/timeId1" />

        <TextView
            android:id="@+id/timeId1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/dateId1"
            app:layout_constraintStart_toStartOf="@+id/dateId1"
            app:layout_constraintTop_toTopOf="@+id/homeId1" />

        <TextView
            android:id="@+id/textView231"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:text="@string/Away"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dateId1" />

        <TextView
            android:id="@+id/homeId1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView221"
            app:layout_constraintStart_toStartOf="@+id/textView221"
            app:layout_constraintTop_toBottomOf="@+id/textView221" />

        <TextView
            android:id="@+id/textView221"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:text="@string/Home"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateId1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView231"
            app:layout_constraintStart_toEndOf="@+id/textView221"
            app:layout_constraintTop_toTopOf="@+id/textView221" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#072158"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonBall2">

        <TextView
            android:id="@+id/awayId2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView232"
            app:layout_constraintStart_toStartOf="@+id/textView232"
            app:layout_constraintTop_toTopOf="@+id/timeId2" />

        <TextView
            android:id="@+id/timeId2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/dateId2"
            app:layout_constraintStart_toStartOf="@+id/dateId2"
            app:layout_constraintTop_toTopOf="@+id/homeId2" />

        <TextView
            android:id="@+id/textView232"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:text="@string/Away"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dateId2" />

        <TextView
            android:id="@+id/homeId2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView222"
            app:layout_constraintStart_toStartOf="@+id/textView222"
            app:layout_constraintTop_toBottomOf="@+id/textView222" />

        <TextView
            android:id="@+id/textView222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:text="@string/Home"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateId2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView232"
            app:layout_constraintStart_toEndOf="@+id/textView222"
            app:layout_constraintTop_toTopOf="@+id/textView222" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#072158"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonBall1">

        <TextView
            android:id="@+id/awayId3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView233"
            app:layout_constraintStart_toStartOf="@+id/textView233"
            app:layout_constraintTop_toTopOf="@+id/timeId3" />

        <TextView
            android:id="@+id/timeId3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/dateId3"
            app:layout_constraintStart_toStartOf="@+id/dateId3"
            app:layout_constraintTop_toTopOf="@+id/homeId3" />

        <TextView
            android:id="@+id/textView233"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:text="@string/Away"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dateId3" />

        <TextView
            android:id="@+id/homeId3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView223"
            app:layout_constraintStart_toStartOf="@+id/textView223"
            app:layout_constraintTop_toBottomOf="@+id/textView223" />

        <TextView
            android:id="@+id/textView223"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:text="@string/Home"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateId3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EFDE24"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView233"
            app:layout_constraintStart_toEndOf="@+id/textView223"
            app:layout_constraintTop_toTopOf="@+id/textView223" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>